test/modules/use/topLevel/useModDotMod5.good
useModDotMod5.chpl:14: In function 'main':
useModDotMod5.chpl:15: error: 'M' undeclared (first use this function)
